--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,11 @@
         }
     ],
     "require": {
-	"lychee/framework": "*@dev"
+        "lychee/framework": "*@dev"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/"
+        }
     }
 }
